# live-sell

./: DEPLOY.md  Dockerfile  README.md  environments.yaml  manifest.yaml  pyproject.toml
db/: __init__.py  firestore_client.py  seed_inventory.py
project/: __init__.py  acp.py  activities.py  agent.py  run_worker.py  workflow.py
project/prompts/: __init__.py  system_prompt.py
project/state_machines/: __init__.py  live_shop.py
project/workflows/: __init__.py
project/workflows/live_shop/: __init__.py  displaying_product.py  handling_chat.py  ingesting_stream.py  processing_purchase.py  querying_inventory.py  terminal_states.py  waiting_for_stream.py
stream/: __init__.py  ingest.py  websocket_server.py
ui/host/: dashboard.js  index.html
ui/viewer/: index.html  product_card.js  stream.js
